--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="0; url=chapter1.html" />
+<!DOCTYPE HTML>
+<head>
+	<title> Bioinformatics  Lab Assignments </title>
+</head>
+
+<body>
+	<h1>Chapterwise Assignments</h1>
+	<h4>Author: Asif Mohaimen</h4>
+	<a href="chapter1.html">Chapter 1</a>
+</body>
