--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <body>
 	<h1>Chapterwise Assignments</h1>
 	<h4>Author: Asif Mohaimen</h4>
-	<a href="chapter1.html">Chapter 1</a>
+	<a href="Chapter1.html">Chapter 1</a>
 </body>
