Redirected to Chapter 1

--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE HTML>
-<head>
-	<title> Bioinformatics  Lab Assignments </title>
-</head>
-
-<body>
-	<h1>Chapterwise Assignments</h1>
-	<h4>Author: Asif Mohaimen</h4>
-	<a href="Chapter1.html">Chapter 1</a>
-</body>
+<meta http-equiv="refresh" content="0; url=Chapter1.html" />
