--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body dir="ltr">
   <div class="container">
     <ol class="breadcrumb" dir="ltr">
-      <li><a href="index.html"><i class="fa fa-tree fa-lg fa-fw">Rosalind Assignments</i></a></li>
+      <li><a href="index.html"><i class="fa fa-cubes fa-lg fa-fw">Rosalind Assignments</i></a></li>
       <a href="https://asifmohaimen.me"><i class="fa fa-user pull-right"> Asif Mohaimen</i></a>
     </ol>
     <div class="table-responsive">
