number of files changed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <tfoot>
           <tr>
             <td colspan="4">
-              <small class="pull-left text-muted" dir="ltr">1 file</small>
+              <small class="pull-left text-muted" dir="ltr">3 files</small>
               <a class="pull-right small text-muted" href="https://github.com/saumiko" title="Saumiko" target="_blank">View me on GitHub</a>
             </td>
           </tr>
