--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">3</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter3.html" ><strong>Chapter 3</strong></a></td>
-            <td class="text-right" data-sort-value="0">চলতেসে। জানিনা কত বিশাল।</td>
+            <td class="text-right" data-sort-value="0">আজিব টাইপ</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">4</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter4.html" ><strong>Chapter 4</strong></a></td>
+            <td class="text-right" data-sort-value="0">চলতেসে।</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
         </tbody>                          
