--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <tfoot>
           <tr>
             <td colspan="4">
-              <small class="pull-left text-muted" dir="ltr">4 files</small>
+              <small class="pull-left text-muted" dir="ltr">7 files</small>
               <a class="pull-right small text-muted" href="https://github.com/saumiko" title="Saumiko" target="_blank">View me on GitHub</a>
             </td>
           </tr>
@@ -43,22 +43,37 @@
         <tbody>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">1</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter1.html" ><strong>Chapter 1</strong></a></td>
-            <td class="text-right" data-sort-value="0">বিশাল</td>
+            <td class="text-right" data-sort-value="0">-</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">2</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter2.html" ><strong>Chapter 2</strong></a></td>
-            <td class="text-right" data-sort-value="0">মোটামুটি বিশাল</td>
+            <td class="text-right" data-sort-value="0">-</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">3</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter3.html" ><strong>Chapter 3</strong></a></td>
-            <td class="text-right" data-sort-value="0">আজিব টাইপ</td>
+            <td class="text-right" data-sort-value="0">-</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">4</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter4.html" ><strong>Chapter 4</strong></a></td>
-            <td class="text-right" data-sort-value="0">চলতেসে।</td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">5</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter5.html" ><strong>Chapter 5</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">6</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter6.html" ><strong>Chapter 6</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">7</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter9.html" ><strong>Chapter 9</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
         </tbody>                          
