--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <meta property="og:title" content="Rosalind Bioinformatics Textbook Track">
-  <meta property="og:description" content="This website contains the solutions for the Bioinformatics Textbook Track problems from rosalind.info.">
+  <meta property="og:description" content="This website contains the solutions for the Bioinformatics Textbook Track problems from rosalind.info & lab tasks of Bioinformatics Course.">
   <meta property="og:image" content="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/12733571_10208895893424060_5751654411359867943_n.jpg?oh=97fa8044592792551c17495a3f93ff0a&oe=59D977B9">
   <meta property="og:url" content="https://rosalind.asifmohaimen.me/index.html">
   <meta name="twitter:card" content="summary_large_image">
@@ -15,11 +15,12 @@
   <link rel="shortcut icon" href="https://asifmohaimen.me/images/favicon.png" type="image/png">
   <title>Bioinformatics Assignment</title>
   <link rel="stylesheet" href="https://idleberg.com/demo/Bootstrap-Listr-2/assets/css/listr.pack.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body dir="ltr">
   <div class="container">
     <ol class="breadcrumb" dir="ltr">
-      <li><a href="index.html"><i class="fa fa-cubes fa-lg fa-fw">Rosalind Assignments</i></a></li>
+      <li><a href="index.html"><i class="fa fa-cubes fa-lg fa-fw">Bio Works</i></a></li>
       <a href="https://asifmohaimen.me"><i class="fa fa-user pull-right"> Asif Mohaimen</i></a>
     </ol>
     <div class="table-responsive">
@@ -35,7 +36,7 @@
         <tfoot>
           <tr>
             <td colspan="4">
-              <small class="pull-left text-muted" dir="ltr">7 files</small>
+              <small class="pull-left text-muted" dir="ltr">16 files</small>
               <a class="pull-right small text-muted" href="https://github.com/saumiko" title="Saumiko" target="_blank">View me on GitHub</a>
             </td>
           </tr>
@@ -73,6 +74,51 @@
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">7</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter9.html" ><strong>Chapter 9</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">8</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E2.html" ><strong>Lab 2</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">9</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E3.html" ><strong>Lab 3</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">10</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E4.html" ><strong>Lab 4</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">11</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E5.html" ><strong>Lab 5</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">12</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E6.html" ><strong>Lab 6</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">13</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E7.html" ><strong>Lab 7</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">14</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E8.html" ><strong>Lab 8</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">15</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="labfinal.html" ><strong>Lab Final Scratchpad</strong></a></td>
+            <td class="text-right" data-sort-value="0">-</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+          </tr>
+          <tr>
+            <td class="text-muted text-right" data-sort-value="1">16</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-archive-o "></i>&nbsp;<a href="Archive.zip" ><strong>Full Compressed Works (Download)</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
             <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
           </tr>
