--- a/index.html
+++ b/index.html
@@ -45,82 +45,82 @@
           <tr>
             <td class="text-muted text-right" data-sort-value="1">1</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter1.html" ><strong>Chapter 1</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">2</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter2.html" ><strong>Chapter 2</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">3</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter3.html" ><strong>Chapter 3</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">4</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter4.html" ><strong>Chapter 4</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">5</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter5.html" ><strong>Chapter 5</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">6</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter6.html" ><strong>Chapter 6</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">7</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="Chapter9.html" ><strong>Chapter 9</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">8</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E2.html" ><strong>Lab 2</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">9</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E3.html" ><strong>Lab 3</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">10</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E4.html" ><strong>Lab 4</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">11</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E5.html" ><strong>Lab 5</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">12</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E6.html" ><strong>Lab 6</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">13</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E7.html" ><strong>Lab 7</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">14</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="E8.html" ><strong>Lab 8</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">15</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-text "></i>&nbsp;<a href="labfinal.html" ><strong>Lab Final Scratchpad</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
           <tr>
             <td class="text-muted text-right" data-sort-value="1">16</td>            <td class="text-left" data-sort-value="checksum"><i class="fa fa-file-archive-o "></i>&nbsp;<a href="Archive.zip" ><strong>Full Compressed Works (Download)</strong></a></td>
             <td class="text-right" data-sort-value="0">-</td>
-            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">Today</td>
+            <td class="text-right" data-sort-value="1" title="2017-05-30 23:43:56">-</td>
           </tr>
         </tbody>                          
       </table>
